--- a/core/cli/package.json
+++ b/core/cli/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@simple/cli",
+  "name": "@simple/cms-cli",
   "version": "0.0.0",
   "description": "> TODO: description",
   "author": "戴鹏鹏 <pengpeng.dai@china.zhaogang.com>",
