--- a/core/cli/package.json
+++ b/core/cli/package.json
@@ -22,5 +22,13 @@
   "scripts": {
     "test": "echo \"Error: run tests from root\" && exit 1"
   },
-  "gitHead": "08dc1144706bfb86826db9ce5e8fd6c02ccd9f6d"
+  "gitHead": "08dc1144706bfb86826db9ce5e8fd6c02ccd9f6d",
+  "dependencies": {
+    "@simple.code/cms-cli-log": "file:../../utils/log",
+    "@simple.code/cms-cli-colors": "file:../../utils/colors",
+    "@simple.code/cms-cli-utils": "file:../../utils/utils",
+    "@simple.code/cms-cli-npm": "file:../../utils/npm",
+    "root-check": "^1.0.0",
+    "user-home": "^3.0.0"
+  }
 }
